[package]
name = "treescan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
walkdir = "2.3.2"
unix_mode = "0.1.3"
users = "0.11.0"
chrono = "0.4.22"
hex = "0.4.3"

[dependencies.clap]
version = "3.2.14"
features = ["derive"]


[profile.release]
strip = true
codegen-units = 1 # better optimizations
lto = true # better optimizations
